<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/item3_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="#FFEB3B"
                android:fontFamily="monospace"
                android:lineSpacingExtra="12sp"
                android:text="@string/item3_name"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="30sp"
                android:textStyle="bold|italic"
                android:padding="@dimen/padding"/>

            <ImageView
                android:id="@+id/item3_image"
                android:layout_width="match_parent"
                android:layout_height="191dp"
                android:contentDescription="@string/item3_name"
                app:srcCompat="@drawable/misty_bike"
                android:padding="@dimen/padding"/>


            <TextView
                android:id="@+id/item3_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFEB3B"
                android:fontFamily="monospace"
                android:text="@string/item3_price"
                android:textAlignment="viewStart"
                android:textSize="30sp"
                android:padding="@dimen/padding"/>

            <TextView
                android:id="@+id/item3_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:lineSpacingExtra="4sp"
                android:text="@string/item3_description"
                android:textAlignment="viewStart"
                android:padding="@dimen/padding"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/quantity_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:text="@string/quantity"
                    android:textSize="24sp"
                    android:padding="@dimen/padding"/>

                <Button
                    android:id="@+id/remove_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:text="@string/remove_button"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:padding="@dimen/padding"/>

                <TextView
                    android:id="@+id/item3_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#FFEB3B"
                    android:fontFamily="monospace"
                    android:text="@string/initial_quantity"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:padding="@dimen/padding"/>

                <Button
                    android:id="@+id/add_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:text="@string/add_button"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:padding="@dimen/padding"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/subtotal_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:text="@string/subtotal_title"
                    android:textSize="24sp"
                    android:padding="@dimen/padding"/>

                <TextView
                    android:id="@+id/initial_subtotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#FFEB3B"
                    android:fontFamily="monospace"
                    android:padding="@dimen/padding"
                    android:text="@string/initial_subtotal"
                    android:textSize="24sp" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>